crates/strider-analyze/tests/snapshots/v3__aarch64be__builtins__clz32.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "6" [label="init\nq1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="init\nq0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="init\nx1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "3" [label="Lzcount\nu64 → u64", shape=box, fillcolor="#2d2d2d"];
  "7" -> "3" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "7" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "8" -> "7" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "8" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "9" -> "8" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "9" [label="init\nx0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "10" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "10" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "11" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v12" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v12" -> "10" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "8" -> "10" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "11" [label="MemPartition[MemPartitionId(0)]", shape=trapezium, fillcolor="#3a1a4a"];
  "13" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "13" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
