crates/strider-analyze/tests/snapshots/v3__aarch64be__builtins__ctz32.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "6" [label="init\nq1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="init\nq0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="init\nx1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "3" [label="Lzcount\nu64 → u64", shape=box, fillcolor="#2d2d2d"];
  "7" -> "3" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "7" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "8" -> "7" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "8" [label="Or:u32", shape=box, fillcolor="#2d2d2d"];
  "9" -> "8" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "10" -> "8" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "10" [label="ShiftLeft:u32", shape=box, fillcolor="#2d2d2d"];
  "11" -> "10" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "12" -> "10" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "12" [label="const 0x10:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "11" [label="Or:u32", shape=box, fillcolor="#2d2d2d"];
  "13" -> "11" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "14" -> "11" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "14" [label="ShiftLeft:u32", shape=box, fillcolor="#2d2d2d"];
  "15" -> "14" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "16" -> "14" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "16" [label="const 0x8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "15" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "17" -> "15" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "18" -> "15" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "18" [label="const 0xff00ff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "17" [label="Or:u32", shape=box, fillcolor="#2d2d2d"];
  "19" -> "17" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "20" -> "17" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "20" [label="ShiftLeft:u32", shape=box, fillcolor="#2d2d2d"];
  "21" -> "20" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "22" -> "20" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "21" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "21" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "24" -> "21" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0xf0f0f0f:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "23" [label="Or:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "23" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "26" -> "23" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "26" [label="ShiftLeft:u32", shape=box, fillcolor="#2d2d2d"];
  "27" -> "26" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "28" -> "26" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "27" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "29" -> "27" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "30" -> "27" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "30" [label="const 0x33333333:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "29" [label="Or:u32", shape=box, fillcolor="#2d2d2d"];
  "31" -> "29" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "32" -> "29" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "32" [label="ShiftLeft:u32", shape=box, fillcolor="#2d2d2d"];
  "33" -> "32" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "34" -> "32" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "34" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "33" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "35" -> "33" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "36" -> "33" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "36" [label="const 0x55555555:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "35" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "37" -> "35" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "37" [label="init\nx0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "31" [label="ShiftRight:u32", shape=box, fillcolor="#2d2d2d"];
  "38" -> "31" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "39" -> "31" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "39" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "38" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "35" -> "38" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "40" -> "38" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "40" [label="const 0xaaaaaaaa:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "25" [label="ShiftRight:u32", shape=box, fillcolor="#2d2d2d"];
  "41" -> "25" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "42" -> "25" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "42" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "41" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "29" -> "41" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "43" -> "41" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "43" [label="const 0xcccccccc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "19" [label="ShiftRight:u32", shape=box, fillcolor="#2d2d2d"];
  "44" -> "19" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "45" -> "19" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "45" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "44" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "44" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "46" -> "44" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "46" [label="const 0xf0f0f0f0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "13" [label="ShiftRight:u32", shape=box, fillcolor="#2d2d2d"];
  "47" -> "13" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "48" -> "13" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "48" [label="const 0x8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "47" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "17" -> "47" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "49" -> "47" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "49" [label="const 0xff00ff00:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "9" [label="ShiftRight:u32", shape=box, fillcolor="#2d2d2d"];
  "11" -> "9" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "50" -> "9" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "50" [label="const 0x10:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "2" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "51" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "51" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "52" -> "51" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v53" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v53" -> "51" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "35" -> "51" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "52" [label="MemPartition[MemPartitionId(0)]", shape=trapezium, fillcolor="#3a1a4a"];
  "54" -> "52" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "54" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
