crates/strider-analyze/tests/snapshots/v3__aarch64be__builtins__expect_branch.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Region", shape=invhouse, fillcolor="#2a1a4a"];
  "v2" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "5" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "8" -> "6" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "9" -> "6" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "10" -> "6" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "11" -> "6" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "11" [label="init\nq1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="init\nq0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="init\nx1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "12" -> "8" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "12" [label="φ Val", shape=house, fillcolor="#163030"];
  "5" -> "12" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "13" -> "12" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "13" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "14" -> "12" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "14" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "15" -> "14" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "16" -> "14" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "16" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "15" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "17" -> "15" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "17" [label="init\nx0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "18" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "18" [label="φ Mem", shape=house, fillcolor="#163030"];
  "5" -> "18" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "19" -> "18" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "20" -> "18" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "20" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "21" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v22" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v22" -> "20" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "14" -> "20" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "21" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "23" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v24" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v24" -> "21" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "15" -> "21" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "23" [label="MemPartition[MemPartitionId(0)]", shape=trapezium, fillcolor="#3a1a4a"];
  "25" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "25" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "19" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "21" -> "19" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v26" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v26" -> "19" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "27" -> "19" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "27" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" [label="Equal\nu8 → bool", shape=box, fillcolor="#2d2d2d"];
  "28" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "29" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "29" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "30" -> "29" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "30" [label="Sborrow\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "15" -> "30" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "31" -> "30" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "31" [label="const 0x65:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "28" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "32" -> "28" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "32" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "33" -> "32" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "34" -> "32" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "34" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "33" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "15" -> "33" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "35" -> "33" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "35" [label="const 0xffffff9b:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
